<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_downloads">

        <Preference
            android:key="downloads_size"
            android:layout="@layout/preference_basic"
            android:selectable="false"
            android:title="@string/downloads_size"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="downloads_cache_size"
            android:layout="@layout/preference_basic"
            android:selectable="false"
            android:title="@string/downloads_cache_size"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="downloads_clear"
            android:layout="@layout/preference_basic"
            android:summary="@string/downloads_clear_summary"
            android:title="@string/downloads_clear"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
