<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_preference_category_application">

        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/theme_switch"
            android:entryValues="@array/theme_switch_val"
            android:key="theme_mode"
            android:layout="@layout/preference_dropdown_md"
            android:title="@string/settings_app_theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <!--
            Off by default. It was declared as on, but nothing ever read it, so no installed copy
            of the app has actually been immersive; honouring that stored default now would hide
            the system bars on every existing device the first time this build runs.
        -->
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="immersive_mode"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_immersive_mode_summary"
            android:title="@string/settings_immersive_mode"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>